# Probability-distribution-visualizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  AUDIT_LOG.md  Dockerfile  FINAL_REPORT.md  FIXES.md  ISSUES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_VERIFICATION_REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
src/distributions/: __init__.py  base.py  continuous.py  copulas.py  discrete.py  mixtures.py  multivariate.py
src/fitting/: __init__.py  distribution_fitter.py
src/monte_carlo/: __init__.py  simulator.py
src/statistical_tests/: __init__.py  descriptive.py  hypothesis_tests.py  nonparametric.py
src/utils/: __init__.py  data_preprocessing.py  logger.py  plotting.py  validation.py
src/visualizers/: __init__.py
tests/: test_copulas.py  test_distributions.py  test_fitting.py  test_integration.py  test_logger.py  test_mixtures.py  test_monte_carlo.py  test_multivariate.py  test_plotting.py  test_statistical_tests.py  test_utils.py
web/: app.py
